--- a/Part1/package.json
+++ b/Part1/package.json
@@ -7,6 +7,14 @@
     "circomlib": "^2.0.3",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.4",
-    "hardhat": "^2.9.3"
+    "hardhat": "^2.9.3",
+    "mocha": "^10.0.0"
+  },
+  "scripts": {
+    "test": "mocha 'test/**/*.js' --timeout 10000"
+  },
+  "dependencies": {
+    "circom_tester": "0.0.11",
+    "circomlibjs": "^0.1.2"
   }
 }
